deploy/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: shopee-gateway
  namespace: shopee
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: shopee-tls
      hosts:
        - api.shopee-clone.com
        - shopee-clone.com
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - api.shopee-clone.com
        - shopee-clone.com
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shopee-ingress
  namespace: shopee
spec:
  hosts:
    - api.shopee-clone.com
  gateways:
    - shopee-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: catalog-product
            port:
              number: 8080
    - match:
        - uri:
            prefix: /api/v1/categories
      route:
        - destination:
            host: catalog-product
            port:
              number: 8080
    - match:
        - uri:
            prefix: /api/v1/cart
      route:
        - destination:
            host: shopping-cart
            port:
              number: 8080
    - match:
        - uri:
            prefix: /api/v1/auth
      route:
        - destination:
            host: identity-auth
            port:
              number: 8080
    - match:
        - uri:
            prefix: /api/v1/orders
      route:
        - destination:
            host: order-processing
            port:
              number: 8080
    - match:
        - uri:
            prefix: /api/v1/checkout
      route:
        - destination:
            host: order-processing
            port:
              number: 8080
    - match:
        - uri:
            prefix: /api/v1/payments
      route:
        - destination:
            host: payment-ledger
            port:
              number: 8080
    - match:
        - uri:
            prefix: /api/v1/search
      route:
        - destination:
            host: search-indexing
            port:
              number: 8080
